# treefolk-atlas

./: .gitignore  README.md  deployment_guide.md  itree-sea.code-workspace  pyproject.toml  requirements.txt
cad_plugin/: README.md  itree_sea.lsp  itree_sea_cad.py  itree_sea_reformat.lsp
data/: analyze_dxf.py  create_sample_dxf.py  run_la_pohon.py  sample_planting.csv  sample_planting.dxf  sample_survey.geojson  seed_species.csv  show_results.py
docs/: Untitled-1.txt  data_standardization_guide.md  deployment_and_features.md  implementation_plan_error_reduction.md  math_specification.md  methodology.md  methodology_id.md  methodology_report.md  methodology_report_id.md
itree_sea/: __init__.py  __main__.py  cad_bridge.py  config.py  dashboard.py  database.py  engine.py  gis_bridge.py  main.py  simulation.py  translations.py
qgis_plugin/: README.md
qgis_plugin/itree_sea_qgis/: __init__.py  metadata.txt  plugin.py
references/: README.md
scratch/: add_trees.py  analyze_clusters.py  analyze_dxf.py  check_blocks.py  check_db.py  check_layers.py  check_tower.py  check_tower2.py  find_keywords.py  gkb_inserts_raw.csv  inspect_block_definitions.py  inspect_damar_coords.py  inspect_dxf.py  inspect_gkb_blocks.py  inspect_gkb_east_blocks.py  inspect_insert_transforms.py  inspect_layout_ranges.py  inspect_tower_tree.py  plot_local_coords.py  print_species_lat_lon.py  reseed_db.py  run_seed.py  test_georef.py  test_parser.py  test_pyproj.py  test_visual_coords.py  update_gwdd.py  verify_db.py
tests/: test_cad_bridge.py  test_database.py  test_engine.py
(+5 files in other folders)
